# Flight_Arbitrage

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .pypirc  .readthedocs.yml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  readthedocs.yml  requirements.txt  tox.ini
.github/workflows/: build.yml  publish.yml
docs/: requirements.txt
docs/source/: conf.py  flight_arbitrage.flight.rst  flight_arbitrage.hidden_city.rst  flight_arbitrage.rst  index.rst  modules.rst  quickstart.rst
flight_arbitrage/: __init__.py  flight.py  hidden_city.py
other/: conf.py  index.rst
test/: test_flight.py  test_hidden_city.py
