[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "flight_arbitrage"
author = "Jordan Rinder"
author-email = "jordan.rinder@gmail.com"
home-page = "https://github.com/jrinder42/Flight_Arbitrage"
requires-python = ">=3.7"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9"
]
description-file = "README.md"

[tool.black]
line-length = 79